--- a/code/bobwhite-sdm-covariate-construction.ipynb
+++ b/code/bobwhite-sdm-covariate-construction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,16 +162,6 @@
     "    icount = focal_count(image, radius, unit)\n",
     "    return isum.divide(icount).rename(new_names)\n",
     "\n",
-    "# Define a function to calculate the Surface Roughness as the the mean absolute deviation of values from the mean within the window - window size is in meters \n",
-    "def surface_sa(image, window_size, name):\n",
-    "    names = image.bandNames().getInfo()\n",
-    "    new_names = [s + name for s in names]\n",
-    "    kernel = ee.Kernel.circle(radius=window_size, units='meters')\n",
-    "    mean = image.reduceNeighborhood(ee.Reducer.mean(), kernel)\n",
-    "    deviation = image.subtract(mean)\n",
-    "    absolute_deviation = deviation.abs()\n",
-    "    return absolute_deviation.reduceNeighborhood(ee.Reducer.mean(), kernel).rename(new_names)\n",
-    "\n",
     "def toFloat(img):\n",
     "    return img.float()"
    ]
@@ -186,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +187,7 @@
     "conus_img = ee.Image(\"projects/GEE_CSP/thirty-by-thirty/aoi_conus_mask\")\n",
     "\n",
     "# export scale and projection\n",
-    "scale = 250\n",
+    "scale = 270\n",
     "projection = ee.Projection('EPSG:5070') # stand-in for now. Figure out best projection to use \n",
     "\n",
     "# Choose radii for summarizing covariates\n",
@@ -253,21 +243,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RAP Proportional Cover"
+    "# Calculate percent cover of row crop from NLCD "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rap_cover_all_small Band names: ['2016_AFG_5km', '2016_PFG_5km', '2016_SHR_5km', '2016_TRE_5km', '2016_BGR_5km', '2017_AFG_5km', '2017_PFG_5km', '2017_SHR_5km', '2017_TRE_5km', '2017_BGR_5km', '2018_AFG_5km', '2018_PFG_5km', '2018_SHR_5km', '2018_TRE_5km', '2018_BGR_5km', '2019_AFG_5km', '2019_PFG_5km', '2019_SHR_5km', '2019_TRE_5km', '2019_BGR_5km', '2021_AFG_5km', '2021_PFG_5km', '2021_SHR_5km', '2021_TRE_5km', '2021_BGR_5km']\n",
-      "Band 1 scale:  30.000000000000004\n",
-      "Band 1 projection:  {'type': 'Projection', 'crs': 'EPSG:4326', 'transform': [0.00026949458523585647, 0, -124.76979458874112, 0, -0.00026949458523585647, 49.393776065783484]}\n"
+      "Products: ['2001', '2004', '2006', '2008', '2011', '2013', '2016', '2019']\n",
+      "rowcrop_pcov_all_band_names Band names: ['rowcrop_16_pcov_5km', 'rowcrop_19_pcov_5km']\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Load all NLCD layers from data release \n",
+    "nlcd_all = ee.ImageCollection('USGS/NLCD_RELEASES/2019_REL/NLCD')\n",
+    "\n",
+    "### The collection contains images for multiple years and regions in the USA.\n",
+    "print('Products:', nlcd_all.aggregate_array('system:index').getInfo())\n",
+    "\n",
+    "nlcd_16 = ee.ImageCollection(\"USGS/NLCD_RELEASES/2019_REL/NLCD\").filter(ee.Filter.eq('system:index', '2016')).first().select('landcover')\n",
+    "nlcd_19 = ee.ImageCollection(\"USGS/NLCD_RELEASES/2019_REL/NLCD\").filter(ee.Filter.eq('system:index', '2019')).first().select('landcover')\n",
+    "\n",
+    "ag_16 = ee.Image(0).where(nlcd_16.eq(82), 1).rename('rowcrop_16')\n",
+    "ag_19 = ee.Image(0).where(nlcd_19.eq(82), 1).rename('rowcrop_19')\n",
+    "\n",
+    "ag_all = ee.Image([ag_16, ag_19])\n",
+    "\n",
+    "rowcrop_pcov_all = percent_cov(ag_all, rad_small, 'meters', '_pcov' + name_small).clip(geometry)\n",
+    "\n",
+    "rowcrop_pcov_all_band_names = rowcrop_pcov_all.bandNames()\n",
+    "print('rowcrop_pcov_all_band_names Band names:', rowcrop_pcov_all_band_names.getInfo())  # ee.List of band names\n",
+    "\n",
+    "rowcrop_pcov_avg = rowcrop_pcov_all.reduce(ee.Reducer.mean()).rename(['NLCD_1619_mean_rowcropPcov'])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Export ag proportional cover as needed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RAP Proportional Cover - first calculate multi-year averages and apply smoothing within 5km smoothing windows "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "band_names: ['2016_AFG', '2016_PFG', '2016_SHR', '2016_TRE', '2016_BGR', '2017_AFG', '2017_PFG', '2017_SHR', '2017_TRE', '2017_BGR', '2018_AFG', '2018_PFG', '2018_SHR', '2018_TRE', '2018_BGR', '2019_AFG', '2019_PFG', '2019_SHR', '2019_TRE', '2019_BGR', '2020_AFG', '2020_PFG', '2020_SHR', '2020_TRE', '2020_BGR', '2021_AFG', '2021_PFG', '2021_SHR', '2021_TRE', '2021_BGR']\n",
+      "tree_mean_smooth Band names: ['RAP_TRE_1621_mean_5km']\n"
      ]
     }
    ],
@@ -282,12 +333,172 @@
     "## PFTs are \"AFGC\" (Annual forb and grass cover), \"BG\" (bare ground), \"LTR\" (litter), \n",
     "## \"PFGC\" (perennial forb and grass cover), \"SHR\" (shrub cover), and \"TREE\" (tree cover)\n",
     "## Select Annual forb and grass cover, perennial forb and grass cover, shrub cover, and tree cover \n",
-    "PFTs = ee.List(['AFG', 'PFG', 'SHR', 'TRE', 'BGR']);\n",
+    "PFTs = ee.List(['AFG', 'PFG', 'SHR', 'TRE', 'BGR'])\n",
     "\n",
     "cover = ee.ImageCollection(\"projects/rangeland-analysis-platform/vegetation-cover-v3\")\n",
     "## ------------- Select the PFTs for processing as defined by User  --------------\n",
-    "cover_toExport = cover.select(PFTs)\n",
+    "cover_toExport = cover.select(PFTs).filter(ee.Filter.inList('year', ee.List([2016, 2017, 2018, 2019, 2020, 2021]))).toBands()\n",
     "\n",
+    "band_names = cover_toExport.bandNames()\n",
+    "print('band_names:', band_names.getInfo())  # ee.List of band names\n",
+    "\n",
+    "# Define string to match\n",
+    "string_to_match = \"_TRE\"\n",
+    "# Get the band names from the image\n",
+    "band_names = cover_toExport.bandNames()\n",
+    "# Filter the bands to select only the ones that contain the partial string\n",
+    "tree_bands = band_names.filter(ee.Filter.stringContains(\"item\", string_to_match))\n",
+    "# Select the TREE COVER bands from the image, calculate the multi-year mean, and apply the focal smooth operation\n",
+    "tree_img = cover_toExport.select(tree_bands).reduce(ee.Reducer.mean()).rename(['RAP_TRE_1621_mean'])\n",
+    "\n",
+    "tree_mean_smooth = focal_mean(tree_img, rad_small, \"meters\", name_small).clip(geometry)\n",
+    "tree_mean_smooth_band_names = tree_mean_smooth.bandNames()\n",
+    "print('tree_mean_smooth Band names:', tree_mean_smooth_band_names.getInfo())  # ee.List of band names\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shrub_mean_smooth Band names: ['RAP_TRE_1621_mean_5km']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Select the SHRUB COVER bands from the image\n",
+    "string_to_match = \"_SHR\"\n",
+    "# Filter the bands to select only the ones that contain the partial string\n",
+    "shrub_bands = band_names.filter(ee.Filter.stringContains(\"item\", string_to_match))\n",
+    "# Select the SHRUB COVER bands from the image\n",
+    "shrub_img = cover_toExport.select(shrub_bands).reduce(ee.Reducer.mean()).rename(['RAP_SHR_1621_mean'])\n",
+    "\n",
+    "shrub_mean_smooth = focal_mean(shrub_img, rad_small, \"meters\", name_small).clip(geometry)\n",
+    "shrub_mean_smooth_band_names = shrub_mean_smooth.bandNames()\n",
+    "print('shrub_mean_smooth Band names:', shrub_mean_smooth_band_names.getInfo())  # ee.List of band names\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "afg_mean_smooth Band names: ['RAP_AFG_1621_mean_5km']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Select the ANNUAL FORB AND GRASS COVER bands from the image\n",
+    "string_to_match = \"_AFG\"\n",
+    "# Filter the bands to select only the ones that contain the partial string\n",
+    "afg_bands = band_names.filter(ee.Filter.stringContains(\"item\", string_to_match))\n",
+    "afg_img = cover_toExport.select(afg_bands).reduce(ee.Reducer.mean()).rename(['RAP_AFG_1621_mean'])\n",
+    "\n",
+    "afg_mean_smooth = focal_mean(afg_img, rad_small, \"meters\", name_small).clip(geometry)\n",
+    "afg_mean_smooth_band_names = afg_mean_smooth.bandNames()\n",
+    "print('afg_mean_smooth Band names:', afg_mean_smooth_band_names.getInfo())  # ee.List of band names\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pfg_mean_smooth Band names: ['RAP_PFG_1621_mean_5km']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Select the PERENNIAL FORB AND GRASS COVER bands from the image\n",
+    "string_to_match = \"_PFG\"\n",
+    "# Filter the bands to select only the ones that contain the partial string\n",
+    "pfg_bands = band_names.filter(ee.Filter.stringContains(\"item\", string_to_match))\n",
+    "# Select the ANNUAL FORB AND GRASS COVER bands from the image\n",
+    "pfg_img = cover_toExport.select(pfg_bands).reduce(ee.Reducer.mean()).rename(['RAP_PFG_1621_mean'])\n",
+    "\n",
+    "pfg_mean_smooth = focal_mean(pfg_img, rad_small, \"meters\", name_small).clip(geometry)\n",
+    "pfg_mean_smooth_band_names = pfg_mean_smooth.bandNames()\n",
+    "print('pfg_mean_smooth Band names:', pfg_mean_smooth_band_names.getInfo())  # ee.List of band names\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bgr_mean_smooth Band names: ['RAP_BGR_1621_mean_5km']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Select the BARE GROUND COVER bands from the image\n",
+    "string_to_match = \"_BGR\"\n",
+    "# Filter the bands to select only the ones that contain the partial string\n",
+    "bgr_bands = band_names.filter(ee.Filter.stringContains(\"item\", string_to_match))\n",
+    "# Select the ANNUAL FORB AND GRASS COVER bands from the image\n",
+    "bgr_img = cover_toExport.select(bgr_bands).reduce(ee.Reducer.mean()).rename(['RAP_BGR_1621_mean'])\n",
+    "\n",
+    "bgr_mean_smooth = focal_mean(bgr_img, rad_small, \"meters\", name_small).clip(geometry)\n",
+    "bgr_mean_smooth_band_names = bgr_mean_smooth.bandNames()\n",
+    "print('bgr_mean_smooth Band names:', bgr_mean_smooth_band_names.getInfo())  # ee.List of band names"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Collect the raw (unsmoothed) multi-year average RAP cover images into a multi-band image for gradient analysis  - export"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "RAP_unsmoothed = ee.Image([tree_img, shrub_img, afg_img, pfg_img, bgr_img ])\n",
+    "\n",
+    "# Convert all to float-32\n",
+    "RAP_unsmoothed = RAP_unsmoothed.float()\n",
+    "scale=270\n",
+    "task1 = ee.batch.Export.image.toDrive(image = RAP_unsmoothed,\n",
+    "                                     folder = 'GEE-exports',\n",
+    "                                     description = 'RAP-1621-mean-unsmoothed' + str(scale) + \"m\",\n",
+    "                                     scale = scale,\n",
+    "                                     region = geometry.geometry(),\n",
+    "                                     maxPixels = 1e13,\n",
+    "                                     crs = \"EPSG:5070\")\n",
+    "task1.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "### Filter RAP cover ImageCollection into yearly sets\n",
     "rap_cover_2016 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2016]))).toBands()\n",
@@ -325,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,6 +546,44 @@
     "daymet_18 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2018-01-01', '2018-12-31'))\n",
     "daymet_19 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2019-01-01', '2019-12-31'))\n",
     "daymet_21 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2021-01-01', '2021-12-31'))\n",
+    "\n",
+    "daymet_1621 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2016-01-01', '2021-12-31'))\n",
+    "tmax_1621 = daymet_1621.select(\"tmax\").mean().rename(['tmax_1621_mean'])\n",
+    "tmin_1621 = daymet_1621.select(\"tmin\").mean().rename(['tmin_1621_mean'])\n",
+    "prcp_1621 = daymet_1621.select(\"prcp\").mean().rename(['prcp_1621_mean'])\n",
+    "swe_1621 = daymet_1621.select(\"swe\").mean().rename(['swe_1621_mean'])\n",
+    "\n",
+    "climate_1621 = ee.Image([tmax_1621, tmin_1621, prcp_1621, swe_1621])\n",
+    "climate_1621_small = focal_mean(climate_1621, rad_small, \"meters\", name_small).updateMask(conus_img).clip(geometry)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Convert all to float-32\n",
+    "climate_1621_small = climate_1621_small.float()\n",
+    "scale=270\n",
+    "task1 = ee.batch.Export.image.toDrive(image = climate_1621_small,\n",
+    "                                     folder = 'GEE-exports',\n",
+    "                                     description = 'climate-1621-mean-unsmoothed' + str(scale) + \"m\",\n",
+    "                                     scale = scale,\n",
+    "                                     region = geometry.geometry(),\n",
+    "                                     maxPixels = 1e13,\n",
+    "                                     crs = \"EPSG:5070\")\n",
+    "task1.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "\n",
     "### mean daily max temperature\n",
@@ -377,42 +626,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gradient Analysis - Surface Roughness applied to RAP Proportional Cover dataset "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sa_img_band_names: ['2016_AFG_5km_sa', '2016_PFG_5km_sa', '2016_SHR_5km_sa', '2016_TRE_5km_sa', '2016_BGR_5km_sa', '2017_AFG_5km_sa', '2017_PFG_5km_sa', '2017_SHR_5km_sa', '2017_TRE_5km_sa', '2017_BGR_5km_sa', '2018_AFG_5km_sa', '2018_PFG_5km_sa', '2018_SHR_5km_sa', '2018_TRE_5km_sa', '2018_BGR_5km_sa', '2019_AFG_5km_sa', '2019_PFG_5km_sa', '2019_SHR_5km_sa', '2019_TRE_5km_sa', '2019_BGR_5km_sa', '2021_AFG_5km_sa', '2021_PFG_5km_sa', '2021_SHR_5km_sa', '2021_TRE_5km_sa', '2021_BGR_5km_sa']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Map the surface_sa function over the RAP image collection - calculate surface roughness in a moving window of 5000m radius\n",
-    "sa_img = surface_sa(rap_cover_all, 5000, \"_5km_sa\").clip(geometry)\n",
-    "\n",
-    "sa_img_band_names = sa_img.bandNames()\n",
-    "print('sa_img_band_names:', sa_img_band_names.getInfo())  # ee.List of band names\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Extract values at grid cell centroids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +721,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "099f42159fab40d1a0294537725a5573",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[20, 0], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(children=(Togg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Get Hansen image for access to water mask\n",
+    "hansenImage = ee.Image(\"UMD/hansen/global_forest_change_2021_v1_9\")\n",
+    "# Select the land/water mask.\n",
+    "datamask = hansenImage.select('datamask')\n",
+    "\n",
+    "#Create a binary mask.\n",
+    "mask = datamask.eq(1)\n",
+    "\n",
+    "rap_cover_2016 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2016]))).toBands()\n",
+    "\n",
+    "rap_cover_2016_mask = rap_cover_2016.updateMask(mask)\n",
+    "\n",
+    "test = rap_cover_2016_mask.select('2016_TRE')\n",
+    "rap_vis = {\n",
+    "    'min': 0,\n",
+    "    'max': 100,\n",
+    "}\n",
+    "\n",
+    "Map = geemap.Map()\n",
+    "Map.addLayer(test, rap_vis, '2016 Tree Cover');\n",
+    "Map\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +777,7 @@
     "  geometry = feature.geometry()\n",
     "\n",
     "  # Extract the raster values for the feature\n",
-    "  values = sa_img.reduceRegion(\n",
+    "  values = sa_img_16.reduceRegion(\n",
     "      reducer=ee.Reducer.mean(),\n",
     "      geometry=geometry)\n",
     "  # Set the values as properties of the feature\n",
@@ -525,7 +790,7 @@
     "    collection=gradient_results,\n",
     "    description='RAP-SA-export',\n",
     "    folder='GEE_exports',\n",
-    "    fileNamePrefix='RAP_SA_5km',\n",
+    "    fileNamePrefix='RAP_2016_SA_5km',\n",
     "    fileFormat='CSV')\n",
     "task.start()"
    ]
@@ -535,7 +800,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extract DAYMET climate values to csv - ARGH I CANNOT GET THIS TO EXPORT "
+    "# Extract DAYMET climate values to csv "
    ]
   },
   {
@@ -565,6 +830,30 @@
     "    fileNamePrefix='daymet_climate_5km',\n",
     "    fileFormat='CSV')\n",
     "task.start()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extract values to points using geemap function "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "work_dir = os.path.expanduser(\"~/Downloads\")\n",
+    "out_csv = os.path.join(work_dir, \"RAP_2016_5km_TREsa_out.csv\")\n",
+    "\n",
+    "geemap.extract_values_to_points(\n",
+    "    centroids,\n",
+    "    tree_sa_16,\n",
+    "    out_csv,\n",
+    "    scale = 30)"
    ]
   }
  ],
