--- a/code/bobwhite-sdm-covariate-construction.ipynb
+++ b/code/bobwhite-sdm-covariate-construction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
     "## Script name: \n",
     "\n",
     "## Purpose of script:\n",
-    "This is a preliminary script for deriving covariates across the northern bobwhite range for use in the construction of a species distribution model.\n",
+    "This is a script for deriving covariates across the northern bobwhite range for use in the construction of a species distribution model.\n",
     "## Author: \n",
     "Patrick Freeman (CSP)\n",
     "## Date Created: \n",
@@ -63,52 +63,6 @@
    "source": [
     "#install geemap module as needed\n",
     "#!pip install geemap "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import ee\n",
-    "import geemap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<p>To authorize access needed by Earth Engine, open the following\n",
-       "        URL in a web browser and follow the instructions:</p>\n",
-       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=Fa6urBC6KRVuV9LdYT4YOwdkiBylmdIGcAx0eM6Bd_g&tc=EIGykcAavMqyK6N6nZwYPsfrSYQYo0STyEn7ZvkHc6Y&cc=rh_5mX1KYr6ReQuPAAQDmBkgw2kS-zG07MWjfSpmcao>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=Fa6urBC6KRVuV9LdYT4YOwdkiBylmdIGcAx0eM6Bd_g&tc=EIGykcAavMqyK6N6nZwYPsfrSYQYo0STyEn7ZvkHc6Y&cc=rh_5mX1KYr6ReQuPAAQDmBkgw2kS-zG07MWjfSpmcao</a></p>\n",
-       "        <p>The authorization workflow will generate a code, which you should paste in the box below.</p>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Successfully saved authorization token.\n"
-     ]
-    }
-   ],
-   "source": [
-    "ee.Authenticate()\n",
-    "ee.Initialize()"
    ]
   },
   {
@@ -675,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,11 +645,11 @@
     "window_radius = 1000\n",
     "slopeRad = slope.multiply(ee.Number(math.pi).divide(180))\n",
     "aspectRad = slope.multiply(ee.Number(math.pi).divide(180))\n",
-    "vrm = compute_vrm(slopeRad, aspectRad, window_radius, \"meters\").rename('vrm')\n",
+    "#vrm = compute_vrm(slopeRad, aspectRad, window_radius, \"meters\").rename('vrm')\n",
     "chili = ee.Image(\"CSP/ERGo/1_0/US/CHILI\").rename('CHILI')\n",
     "\n",
     "# Combine and smooth\n",
-    "terrain_all = ee.Image([elev, slope, aspect, vrm, chili])\n",
+    "terrain_all = ee.Image([elev, slope, aspect, chili])\n",
     "terrain_small = focal_mean(terrain_all, rad_small, \"meters\", name_small)\n",
     "\n",
     "\n"
@@ -711,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +690,7 @@
     "# Export the feature collection as a CSV file\n",
     "task = ee.batch.Export.table.toDrive(\n",
     "    collection=terrain_results,\n",
-    "    description='Terrain-export',\n",
+    "    description='Terrain-export-noVRM',\n",
     "    folder='GEE-exports',\n",
     "    fileNamePrefix='terrain_5km_smooth',\n",
     "    fileFormat='CSV')\n",
@@ -753,45 +707,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert all to float-32\n",
-    "covs_all = covs_all.float().clip(geometry)\n",
-    "rd_dist_ready = rd_dist.float().clip(geometry)\n",
-    "\n",
-    "task1 = ee.batch.Export.image.toDrive(image = covs_all,\n",
-    "                                     folder = 'mule-deer-covs',\n",
-    "                                     description = 'mule-deer-covs-final-' + str(scale) + \"m\",\n",
+    "scale=30\n",
+    "terrain_raster = terrain_small.float()\n",
+    "task1 = ee.batch.Export.image.toDrive(image = terrain_raster,\n",
+    "                                     folder = 'GEE-exports',\n",
+    "                                     description = 'terrain-mean-smoothed' + str(scale) + \"m\",\n",
     "                                     scale = scale,\n",
     "                                     region = geometry.geometry(),\n",
     "                                     maxPixels = 1e13,\n",
-    "                                     crs = \"EPSG:26911\")\n",
-    "task1.start()\n",
-    "\n",
-    "#task2 = ee.batch.Export.image.toDrive(image = rd_dist_ready,\n",
-    "#                                     folder = 'mule-deer-covs',\n",
-    "#                                     description = 'mule-deer-road-distance-present-90m',\n",
-    "#                                     scale = 90,\n",
-    "#                                     region = geometry.geometry(),\n",
-    "#                                     maxPixels = 1e13,\n",
-    "#                                     crs = \"EPSG:26911\")\n",
-    "#task2.start()\n",
-    "\n",
-    "#task1 = ee.batch.Export.image.toCloudStorage(image = covs_all,\n",
-    "#                                     folder = 'mule-deer-covs',\n",
-    "#                                     description = 'mule-deer-covs-' + str(scale) + \"m\",\n",
-    "#                                    bucket: 'blm-connectivity/data/muledeer/source'\n",
-    "#                                     fileNamePrefix: 'image_export'\n",
-    "#                                    scale = scale,\n",
-    "#                                     region = geometry,\n",
-    "#                                     maxPixels = 1e13,\n",
-    "#                                     crs = \"EPSG:26911\")\n",
-    "\n",
-    "# Road covs\n",
-    "# These need to be exported at coarser resolution to deal with \n",
-    "# max kernel size issues and need to cover full study area\n"
+    "                                     crs = \"EPSG:5070\")\n",
+    "task1.start()"
    ]
   }
  ],
