--- a/code/bobwhite-sdm-covariate-construction.ipynb
+++ b/code/bobwhite-sdm-covariate-construction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
     "## Date Created: \n",
     "04/25/23\n",
     "## Date last modified:\n",
-    "05/16/2023\n",
+    "06/13/23\n",
     "## Email: \n",
     "patrick[at]csp-inc.org\n",
     "## ---------------------------\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -309,12 +309,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Calculate proportional cover of pasture from NLCD "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pasture_pcov_all_band_names Band names: ['pasture_16_pcov_5km', 'pasture_19_pcov_5km']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "pasture_16 = ee.Image(0).where(nlcd_16.eq(81), 1).rename('pasture_16')\n",
+    "pasture_19 = ee.Image(0).where(nlcd_19.eq(81), 1).rename('pasture_19')\n",
+    "\n",
+    "pasture_all = ee.Image([pasture_16, pasture_19])\n",
+    "\n",
+    "pasture_pcov_all = percent_cov(pasture_all, rad_small, 'meters', '_pcov' + name_small).clip(geometry)\n",
+    "\n",
+    "pasture_pcov_all_band_names = pasture_pcov_all.bandNames()\n",
+    "print('pasture_pcov_all_band_names Band names:', pasture_pcov_all_band_names.getInfo())  # ee.List of band names\n",
+    "\n",
+    "pasture_pcov_avg = pasture_pcov_all.reduce(ee.Reducer.mean()).rename(['NLCD_1619_mean_pasturePcov'])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Export ag proportional cover as needed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,16 +368,29 @@
     "  # Set the values as properties of the feature\n",
     "  return feature.set(values)\n",
     "\n",
-    "# Map the extract_values function over the feature collection\n",
-    "agpcov_results = centroids.map(extract_agpcov_values)\n",
+    "def extract_pasturepcov_values(feature):\n",
+    "  # Get the geometry of the feature\n",
+    "  geometry = feature.geometry()\n",
     "\n",
+    "  # Extract the raster values for the feature\n",
+    "  values = pasture_pcov_avg.reduceRegion(\n",
+    "      reducer=ee.Reducer.mean(),\n",
+    "      geometry=geometry,\n",
+    "      scale=30)\n",
+    "\n",
+    "  # Set the values as properties of the feature\n",
+    "  return feature.set(values)\n",
+    "\n",
+    "# Map the extract_values function over the feature collection\n",
+    "#agpcov_results = centroids.map(extract_agpcov_values)\n",
+    "pasturepcov_results = centroids.map(extract_pasturepcov_values)\n",
     "\n",
     "# Export the feature collection as a CSV file\n",
     "task = ee.batch.Export.table.toDrive(\n",
-    "    collection=agpcov_results,\n",
-    "    description='AgPCOV-export',\n",
+    "    collection=pasturepcov_results,\n",
+    "    description='PasturePCOV-export',\n",
     "    folder='GEE-exports',\n",
-    "    fileNamePrefix='AgPCov_5km_1619',\n",
+    "    fileNamePrefix='PasturePCov_5km_1619',\n",
     "    fileFormat='CSV')\n",
     "task.start()\n"
    ]
